--- a/public/app.html
+++ b/public/app.html
@@ -266,7 +266,7 @@
     </div>
     <div id="appTemp" class="stage">
       <div id="headline" class="title">App</div>
-      <div id="module" class="txt">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
+      <div id="module" class="txtabt" style="width: 700px">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</div>
     </div>
     <div id="netTemp" class="stage">
       <div id="headline" class="title">Networks</div>
@@ -281,7 +281,7 @@
     </div>
     <div id="aboutTemp" class="stage">
       <div id="headline" class="title">About</div>
-      <div id="module" class="txt">
+      <div id="module" class="txtabt">
         <h2>DOJOv2 is by Devs for Devs !</h2>
         <p>We have put lots of effort into our Project and didnt hesitate to make it as complete and flexible as possible! This Tool Supports the DIAS dynamic NFT Standard and uses no react or upscaled frameworks that cost unneccessary serverspace and limit your creativity. This Framework is Vanilla JS based, builds go through Webpack, web3 connection is connected by truffle, vrf random numbers & oracle sources by chainlink, decentral data storage on IPFS and the concept is limited only by your creativity and skill level.</p>
         <h2>
@@ -322,14 +322,20 @@
       </div>
     </div>
     <div id="teamTemp" class="stage">
-      <div id="headline" class="title">Team</div>
+      <div id="head" class="title">Team</div>
       <div id="module" class="stage">
-        <h2 id="team">DOJO.guru</h2>
+        <h2 id="team"></h2>
         <div id="stereo">
-          <img src="./images/stereo.png" id="teamPic" />
+          <div>
+            <img src="./images/stereo.png" id="teamPic" />
+            <img style="width: 60vw; height: auto" src="./images/sirheeb.png" />
+          </div>
         </div>
         <div id="xnode">
-          <img src="./images/xnode.png" id="teamPic" />
+          <div>
+            <img src="./images/xnode.png" id="teamPic" />
+            <img style="width: 60vw; height: auto" src="./images/_juan.png" />
+          </div>
         </div>
         <!-- 
         <div id="sirheeb">
@@ -646,10 +652,6 @@
             <input class="my-button" id="eco" type="button" value="eco" />
             <input class="my-button" id="irie" type="button" value="irie" />
             <input class="my-button" id="modern" type="button" value="modern" />
-
-
-
-
           </div>
           <p class="tiny">* Required Fields</p>
         </div>
