--- a/public/app.html
+++ b/public/app.html
@@ -328,13 +328,13 @@
         <div id="stereo">
           <div>
             <img src="./images/stereo.png" id="teamPic" />
-            <img style="width: 60vw; height: auto" src="./images/sirheeb.png" />
+            <img style="width: 60vw; height: auto" src="./images/sirheeb.jpg" />
           </div>
         </div>
         <div id="xnode">
           <div>
             <img src="./images/xnode.png" id="teamPic" />
-            <img style="width: 60vw; height: auto" src="./images/_juan.png" />
+            <img style="width: 60vw; height: auto" src="./images/_juan.jpg" />
           </div>
         </div>
         <!-- 
