--- a/public/app.html
+++ b/public/app.html
@@ -256,7 +256,7 @@
         <br />
         <div class="image">
           <p>Continuously adding support for the most in-demand chains.</p>
-          <img src="./images/editt.svg" alt="" />
+          <img src="./images/edit.svg" alt="" />
         </div>
       </div>
     </div>
